# Compiler

./: README.md
Compiler/: CMakeLists.txt  Extensions.swift  File.swift  Lexer.swift  Parser.swift  Structs.swift  Testing.swift  Token.swift  ViewController.swift  main.swift
Compiler.xcodeproj/: project.pbxproj
Compiler.xcodeproj/xcuserdata/anastasia.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Compiler/Compiler/: Extensions.swift  Lexer.swift  Parser+ErrorExtension.swift  Parser+Helpers.swift  Parser.swift  Structs.swift  Token.swift  TreePrinter.swift  Variables.swift
Compiler/Compiler/Nodes/: Argument.swift  CodeBlock.swift  Function.swift  Identifier.swift  IfStatement.swift  InfixOperation.swift  Number.swift  PrefixOperation.swift  ReturnStatement.swift  Variable.swift  VariableIdentifier.swift  WhileStatement.swift
Compiler/Compiler/Parser/: CodeBlockParesr.swift  DeclarationParser.swift  ExpressionParser.swift  IfStatementParser.swift  Parser+ErrorExtension.swift  Parser+Helpers.swift  Parser.swift  WhileStatementParser.swift
Compiler/Other/: AppDelegate.swift  SceneDelegate.swift
